--- a/src/app/alerts/components/list-menu.html
+++ b/src/app/alerts/components/list-menu.html
@@ -10,11 +10,8 @@
             list.one-way="list"
             label.one-way="list.name"
             click.call="selectList(list)"
-            delete.call="confirmDeleteList(list)"
-            share.call="shareList(list)"
+            delete.call="deleteList(list)"
+            share.delegate="share ? shareList(list) : undefined"
             class-name="${$parent.selectedList.id === list.id ? 'primary-action' : 'transparent'}"></list-label>
     </div>
-
-    <confirmation-modal view-model.ref="deleteConfirmationModal" message="lists.deleteConfirmation"></confirmation-modal>
-    <confirmation-modal view-model.ref="shareConfirmationModal" message="lists.shareConfirmation"></confirmation-modal>
 </template>
