--- a/src/app/alerts/followed-lists/index.html
+++ b/src/app/alerts/followed-lists/index.html
@@ -15,5 +15,8 @@
     </alerts-list>
 
     <loader text="alerts.working" is-active.one-way="isUpdating"></loader>
-    <confirmation-modal view-model.ref="confirmationModal" message="followedLists.unfollowConfirmation"></confirmation-modal>
+    <confirmation-modal view-model.ref="confirmUnfollowListModal">
+        <div slot="header">${'followedLists.unfollowConfirmation' | t: {context: 'title' } & oneTime}</div>
+        <div slot="content">${'followedLists.unfollowConfirmation' | t: {context: 'description' } & oneTime}</div>
+    </confirmation-modal>
 </template>
