--- a/src/app/alerts/my-alerts/index.html
+++ b/src/app/alerts/my-alerts/index.html
@@ -20,6 +20,7 @@
         alerts.one-way="alerts"
         is-read-only.one-time="false"
         selected-alerts.two-way="selectedAlerts"
+        navigate.call="navigateToAlert(alert)"
         add.call="showModal(createAlertModal)"
         activate.call="activateAlert(alert)">
     </alerts-list>
