--- a/src/app/alerts/components/alerts-list.html
+++ b/src/app/alerts/components/alerts-list.html
@@ -1,7 +1,7 @@
 <template>
     <require from="./alert-card"></require>
 
-    <div class="ui one column grid mobile only">
+    <div class="ui one column grid mobile only" if.one-time="add">
         <div class="column">
             <div class="ui icon large primary primary-action button" style="display: block; margin: 0;" click.delegate="add()" i18n="[append]alerts.createAlert"
                 data-analytics-category="Alerts"
@@ -23,7 +23,7 @@
                             style="width: 160px; height: 160px; top: calc(50% - 80px); left: calc(50% - 80px); position: absolute;">
                     </div>
                 </a>
-                <alert-card repeat.for="alert of alerts | sort:'title'" alert.one-time="alert" style="border-radius: 2px;" containerless>
+                <alert-card repeat.for="alert of alerts | sort:'title'" alert.one-time="alert" navigate.call="navigateToAlert(alert)" style="border-radius: 2px;" containerless>
                     <div slot="top-action" if.one-time="!isReadOnly">
                         <i class="right floated circular button">
                             <div class="ui fitted radio checkbox">
@@ -44,7 +44,7 @@
             </div>
         </div>
     </div>
-    <div class="ui one column grid mobile only">
+    <div class="ui one column grid mobile only" if.one-time="add">
         <div class="column">
             <div class="ui icon large primary primary-action button" style="display: block; margin: 0;" click.delegate="add()" i18n="[append]alerts.createAlert"
                 data-analytics-category="Alerts"
