--- a/src/app/alerts/components/list-label.html
+++ b/src/app/alerts/components/list-label.html
@@ -1,15 +1,22 @@
 <template>
     <div class="item">
-        <a class="ui ${className} large label" click.delegate="click({ list: list })"
-            data-analytics-category="List"
-            data-analytics-action="filter">
-            ${label}
-            <i if.one-time="share" class="external share icon button" click.delegate="share({ list: list })"
+        <div class="ui left labeled button">
+            <a class="ui basic label" click.delegate="click({ list: list })">${label}</a>
+            <div if.one-time="unshare" class="ui icon button" style="border-radius: 0" click.delegate="unshare({ list: list })"
                 data-analytics-category="List"
-                data-analytics-action="share"></i>
-            <i if.one-time="delete" class="delete icon button" click.delegate="delete({ list: list })"
+                data-analytics-action="unshare">
+                <i class="stop share icon"></i>
+            </div>
+            <div if.one-time="share" class="ui icon button" style="border-radius: 0" click.delegate="share({ list: list })"
                 data-analytics-category="List"
-                data-analytics-action="delete"></i>
-        </a>
+                data-analytics-action="share">
+                <i class="external share icon"></i>
+            </div>
+            <div if.one-time="delete" class="ui icon button" click.delegate="delete({ list: list })"
+                data-analytics-category="List"
+                data-analytics-action="delete">
+                <i class="delete share icon"></i>
+            </div>
+        </div>
     </div>
 </template>
