Added the option to unshare a list

--- a/src/app/alerts/components/list-label.html
+++ b/src/app/alerts/components/list-label.html
@@ -7,7 +7,7 @@
                 data-analytics-action="unshare">
                 <i class="stop share icon"></i>
             </div>
-            <div if.one-time="share" class="ui icon button" style="border-radius: 0" click.delegate="share({ list: list })"
+            <div if.one-way="share" class="ui icon button" style="border-radius: 0" click.delegate="share({ list: list })"
                 data-analytics-category="List"
                 data-analytics-action="share">
                 <i class="external share icon"></i>
