--- a/src/app/alert/sources/index.html
+++ b/src/app/alert/sources/index.html
@@ -27,7 +27,7 @@
                                 <th>
                                     <div class="ui relaxed items">
                                         <div class="ui text menu">
-                                            <div class="item" i18n="[prepend]alert.bestDealUpdatedTime">${alert.modifiedAt | rt}</div>
+                                            <div class="item" i18n="[prepend]alert.bestDealUpdatedTime">${alert.modifiedAt & rt}</div>
                                         </div>
                                     </div>
                                 </th>
@@ -77,7 +77,7 @@
                                         data-analytics-action="click"
                                         data-analytics-label="originalUrl">${product.title}</a>
                                     <div class="meta">
-                                        <small i18n="[prepend]alert.lastUpdatedTime">${product.lastUpdate | rt}</small>
+                                        <small i18n="[prepend]alert.lastUpdatedTime">${product.lastUpdate & rt}</small>
                                     </div>
                                 </div>
                                 <a class="image mobile hidden" href.bind="product.productUrl" target="_blank"
