--- a/src/app/alerts/my-alerts/index.html
+++ b/src/app/alerts/my-alerts/index.html
@@ -14,7 +14,7 @@
         selected-list.two-way="currentList"
         delete.call="confirmDeleteList(list)"
         share.call="confirmShareList(list)"
-        unshare.call="confirmShareList(list)">
+        unshare.call="confirmUnshareList(list)">
     </list-menu>
 
     <alerts-list
