--- a/src/app/alert/index.html
+++ b/src/app/alert/index.html
@@ -15,7 +15,7 @@
                 </div>
             </div>
 
-            <div class="ui one column mobile only grid">
+            <div class="ui one column mobile only grid" if.one-time="!isReadOnly">
                 <div class="column">
                     <div class="ui form">
                         <div class="inline field">
@@ -33,10 +33,10 @@
                 <span style="margin-left: 1em; display: inline-block;">
                     <h1 class="ui sixteen wide h3 transparent icon input field" style="margin-top: 1em;">
                         <i class="edit icon" style="color: white; position: absolute; left: 0; background: rgba(255, 255, 255, 0.3); border-radius: .28571429rem 0 0 .28571429rem; width: 2.67142857rem !important;"></i>
-                        <textarea value.bind="title & updateTrigger:'blur'" class="input" rows="2"></textarea>
+                        <textarea value.bind="title & updateTrigger:'blur'" readonly.one-time="isReadOnly" class="input" rows="2"></textarea>
                     </h1>
 
-                    <div class="ui mini form" style="margin: 0.7rem 0 2rem 3.67142857rem;">
+                    <div class="ui mini form ${isReadOnly ? 'visibility-hidden' : ''}" style="margin: 0.7rem 0 2rem 3.67142857rem;">
                         <div class="inline field">
                             <div class="ui checkbox">
                                 <input type="checkbox" checked.bind="isActive" change.delegate="changeActive()">
