--- a/src/app/shared/components/back-button.html
+++ b/src/app/shared/components/back-button.html
@@ -1,6 +1,6 @@
 <template>
     <div class="ui inverted secondary pointing menu">
-        <a route-href="route: alerts;" class="back-button item">
+        <a click.delegate="navigateBack()" class="back-button item">
             <h2 class="title" i18n="[append]alert.title">
                 <div class="basic circular ui icon inverted button">
                     <i class="large inverted chevron left icon"></i>
