--- a/static/styles.css
+++ b/static/styles.css
@@ -50,6 +50,10 @@ body {
     background-color: rgba(0, 0, 0, .1) !important;
 }
 
+.visibility-hidden {
+    visibility: hidden !important;
+}
+
 section {
   margin: 0 20px;
 }
@@ -181,6 +185,10 @@ section {
     border: none;
     text-align: right;
     opacity: 1;
+}
+
+.ui.basic.table tbody tr td table tr td {
+    border-top: none;
 }
 
 .ui.mini.form .ui.checkbox label {
